# BODscore

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  NEWS  README  README.md  README.txt  configure  configure.ac  index.html  install.sh  params.json  run_list_fgcz.py  vcf.db-journal
Debug/: makefile  sources.mk
Debug/src/: subdir.mk
Debug/src/sambamio/: subdir.mk
libs/: bamtools_CMakeLists.txt  bamtools_src_CMakeLists.txt  bamtools_src_api_CMakeLists.txt  sqlite3pp_src_CMakeLists.txt  sqlite3pp_src_sqlite_CMakeLists.txt
src/: .ParseSNP.cpp.swp  BasisClass.cpp  BasisClass.h  CMakeLists.txt  Coverage.cpp  Coverage.h  Global.h  Ident_hist.cpp  Ident_hist.h  ParseSNP.cpp  ParseSNP.h  QdrArray.h  SqliteDB.cpp  SqliteDB.h  SqliteDb.cpp  SqliteDb.h  VShape.cpp  nvshape.cpp  plotCoverage.py  rscript.R
src/pyscripts/: CoverageSummary.py  ReadCoverage.py  assemble_feature_vector.py  assemble_feature_vector_sql.py  db0.py  plot_coverage_sqlite.py  plot_coverage_tab.py  read_db_into_arrays.py  run_list.py
src/sambamio/: Alignment.cpp  Alignment.h  BamParser.cpp  BamParser.h  Coverage.cpp  Coverage.h  FastaParser.cpp  FastaParser.h  Parser.h  SamParser.cpp  SamParser.h  _CMakeLists.txt
src/sambamio/.svn/: all-wcprops  entries
src/sambamio/.svn/text-base/: Alignment.cpp.svn-base  Alignment.h.svn-base  BamParser.cpp.svn-base  BamParser.h.svn-base  FastaParser.cpp.svn-base  FastaParser.h.svn-base  Parser.h.svn-base  SamParser.cpp.svn-base  SamParser.h.svn-base
testcase/: Ref.fa  db_vshape_test.sh  dbtocsv.sh  dumper.py  out.sort.snp.vcf  short.bam.bai  tab_vshape_test.sh  testvshape.sh  visualise.sh
